--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
@@ -39,11 +39,6 @@ h2 {
     background-color: $color-light-stronger;
   }
 
-  td:last-child {
-    text-align: center;
-    vertical-align: middle;
-  }
-
   .section-header td {
     font-weight: $font-weight-bold;
     height: rhythm(8);
@@ -82,7 +77,9 @@ h2 {
   color: $color-neutral-regular;
   margin: rhythm(6) 0;
   padding-bottom: rhythm(2);
-
+  .on-premise {
+    margin-left: rhythm(2);
+  }
 }
 
 .calculator {
