Add data-cy everywhere it's needed

--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.html
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.html
@@ -7,6 +7,7 @@
 
   <pa-button
     class="create-nua-button"
+    data-cy="open-create-nua-key-dialog"
     (click)="openDialog()">
     {{ 'account.create_nua_key' | translate }}
   </pa-button>
