--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -165,6 +165,7 @@
         <pa-button
           type="submit"
           kind="primary"
+          data-cy="save-kb-settings"
           [disabled]="kbForm.invalid || kbForm.pristine || saving">
           {{ 'generic.save' | translate }}
         </pa-button>
