--- a/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
@@ -10,6 +10,7 @@
       icon="circle-plus"
       kind="primary"
       aspect="solid"
+      data-cy="add-label-set"
       (click)="addLabelSet()">
       {{ 'label-set.add-button' | translate }}
     </pa-button>
