--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -105,6 +105,7 @@
         <nsi-dropdown-button
           size="small"
           aspect="basic"
+          data-cy="visible-columns-dropdown"
           [popupRef]="visibleColumns">
           {{ 'resource.visible_columns_dropdown' | translate }}
         </nsi-dropdown-button>
