--- a/libs/user/src/lib/login/login.component.html
+++ b/libs/user/src/lib/login/login.component.html
@@ -90,6 +90,7 @@
       <span>{{ 'login.have_account' | translate }}</span>
       <a
         [routerLink]="['../signup']"
+        data-cy="create-account"
         queryParamsHandling="merge">
         {{ 'login.create_one' | translate }}
       </a>
