--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
@@ -88,6 +88,7 @@
 
     <pa-button
       size="small"
+      data-cy="add-kb"
       [disabled]="knowledgeBoxes.length >= maxKnowledgeBoxes && maxKnowledgeBoxes !== -1"
       (click)="addKb(zones, account)">
       {{ 'account.stash.add' | translate }}
