--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -11,6 +11,7 @@
             [routerLink]="kbUrl"
             class="nav-link"
             routerLinkActive="active"
+            data-cy="go-to-home"
             [routerLinkActiveOptions]="{ exact: true }">
             <pa-icon name="home"></pa-icon>
             <span class="nav-link-title">{{ 'stash.home.link' | translate }}</span>
@@ -23,6 +24,7 @@
             [routerLink]="(isAdminOrContrib | async) && !(invalidKey | async) ? kbUrl + '/upload' : null"
             class="nav-link"
             routerLinkActive="active"
+            data-cy="go-to-upload"
             [routerLinkActiveOptions]="{ exact: true }"
             [class.disabled]="!(isAdminOrContrib | async) || (invalidKey | async)">
             <pa-icon name="upload"></pa-icon>
@@ -34,6 +36,7 @@
         <div class="group-items">
           <a
             class="nav-link"
+            data-cy="go-to-search"
             routerLinkActive="active"
             [routerLink]="!(invalidKey | async) ? kbUrl + '/search' : null"
             [class.disabled]="invalidKey | async">
@@ -44,6 +47,7 @@
             [routerLink]="!(invalidKey | async) ? kbUrl + '/resources' : null"
             routerLinkActive="active"
             class="nav-link"
+            data-cy="go-to-resources"
             [class.disabled]="invalidKey | async">
             <pa-icon name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
@@ -53,6 +57,7 @@
               [routerLink]="(isAdminOrContrib | async) ? kbUrl + '/activity/download' : null"
               routerLinkActive="active"
               class="nav-link"
+              data-cy="go-to-activity-log"
               [class.disabled]="!(isAdminOrContrib | async)">
               <pa-icon name="activity-log"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
@@ -63,6 +68,7 @@
             [routerLink]="!(invalidKey | async) ? kbUrl + '/label-sets' : null"
             routerLinkActive="active"
             class="nav-link"
+            data-cy="go-to-classification"
             [class.disabled]="invalidKey | async">
             <pa-icon name="label"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.classification' | translate }}</span>
@@ -72,6 +78,7 @@
             [routerLink]="!(invalidKey | async) ? kbUrl + '/entities' : null"
             routerLinkActive="active"
             class="nav-link"
+            data-cy="go-to-ner"
             [class.disabled]="invalidKey | async">
             <pa-icon name="form"></pa-icon>
             <span class="nav-link-title">{{ 'generic.named-entities' | translate }}</span>
@@ -81,6 +88,7 @@
               *ngIf="isSynonymsEnabled | async"
               [routerLink]="[kbUrl + '/synonyms']"
               routerLinkActive="active"
+              data-cy="go-to-synonyms"
               class="nav-link">
               <pa-icon name="synonyms"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.synonyms' | translate }}</span>
@@ -95,6 +103,7 @@
             [routerLink]="(isAdmin | async) && !(invalidKey | async) ? kbUrl + '/manage' : null"
             routerLinkActive="active"
             class="nav-link"
+            data-cy="go-to-settings"
             [class.disabled]="!(isAdmin | async) || (invalidKey | async)">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.settings' | translate }}</span>
@@ -108,6 +117,7 @@
               [routerLink]="(isAdmin | async) ? kbUrl + '/training' : null"
               routerLinkActive="active"
               class="nav-link"
+              data-cy="go-to-trainings"
               [class.disabled]="!(isAdmin | async)">
               <pa-icon name="submenu"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.trainings' | translate }}</span>
@@ -118,6 +128,7 @@
               <a
                 [routerLink]="kbUrl + '/users'"
                 routerLinkActive="active"
+                data-cy="go-to-users"
                 class="nav-link">
                 <pa-icon name="users"></pa-icon>
                 <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
@@ -130,6 +141,7 @@
             <a
               [routerLink]="kbUrl + '/keys'"
               routerLinkActive="active"
+              data-cy="go-to-api-keys"
               class="nav-link">
               <pa-icon name="lock-off"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.api_keys' | translate }}</span>
@@ -142,6 +154,7 @@
             [routerLink]="(isAdmin | async) && !(invalidKey | async) ? kbUrl + '/widget-generator' : null"
             routerLinkActive="active"
             class="nav-link"
+            data-cy="go-to-widget"
             [class.disabled]="!(isAdmin | async) || (invalidKey | async)">
             <pa-icon name="widget"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
@@ -150,6 +163,7 @@
         <div
           class="group-items"
           routerLink="/"
+          data-cy="go-to-manage-kbs"
           *ngIf="standalone">
           <a class="nav-link">
             <pa-icon name="knowledge-box"></pa-icon>
@@ -165,6 +179,7 @@
             [routerLink]="(isAccountManager | async) ? (accountUrl | async) + '/home' : null"
             class="nav-link"
             routerLinkActive="active"
+            data-cy="go-to-manage-account"
             [class.disabled]="!(isAccountManager | async)">
             <pa-icon name="account"></pa-icon>
             <span class="nav-link-title">{{ 'account.manage' | translate }}</span>
@@ -180,6 +195,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/home'"
             routerLinkActive="active"
+            data-cy="go-to-account-home"
             class="nav-link">
             <pa-icon name="home"></pa-icon>
             <span class="nav-link-title">{{ 'account.home' | translate }}</span>
@@ -189,6 +205,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/settings'"
             routerLinkActive="active"
+            data-cy="go-to-account-settings"
             class="nav-link">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'account.settings' | translate }}</span>
@@ -198,6 +215,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/kbs'"
             routerLinkActive="active"
+            data-cy="go-to-account-kbs"
             class="nav-link">
             <pa-icon name="knowledge-box"></pa-icon>
             <span class="nav-link-title">{{ 'account.knowledgeboxes' | translate }}</span>
@@ -207,6 +225,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/users'"
             routerLinkActive="active"
+            data-cy="go-to-account-users"
             class="nav-link">
             <pa-icon name="users"></pa-icon>
             <span class="nav-link-title">{{ 'account.users' | translate }}</span>
@@ -216,6 +235,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/nua'"
             routerLinkActive="active"
+            data-cy="go-to-nua-keys"
             class="nav-link">
             <pa-icon name="key"></pa-icon>
             <span class="nav-link-title">{{ 'account.nua_keys' | translate }}</span>
@@ -227,6 +247,7 @@
           <a
             [routerLink]="(accountUrl | async) + '/billing'"
             routerLinkActive="active"
+            data-cy="go-to-billing"
             class="nav-link">
             <pa-icon name="payment"></pa-icon>
             <span class="nav-link-title">{{ 'account.billing' | translate }}</span>
@@ -239,6 +260,7 @@
         <div class="group-items">
           <a
             [routerLink]="kbUrl"
+            data-cy="go-to-home-from-account"
             class="nav-link">
             <pa-icon name="chevron-left"></pa-icon>
             <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
