[sc-7854] checkbox ticks not following the scroll

--- a/libs/search-widget/src/common/checkbox/Checkbox.scss
+++ b/libs/search-widget/src/common/checkbox/Checkbox.scss
@@ -5,6 +5,7 @@
   display: inline-flex;
   gap: var(--rhythm-1);
   max-width: 100%;
+  position: relative;
 
   .sw-checkbox-control {
     -webkit-appearance: none;
