--- a/libs/user/src/lib/check-mail/check-mail.component.html
+++ b/libs/user/src/lib/check-mail/check-mail.component.html
@@ -2,15 +2,16 @@
   <div class="check-email-container">
     <img
       src="assets/signup/check-email.png"
-      [alt]="'login.check_email' | translate" />
+      [alt]="'login.check_email.title' | translate" />
 
-    <h1 qa="confirmation-title">{{ 'login.check_email' | translate }}</h1>
-    <p
-      class="body-m"
-      [innerHTML]="'login.check_email_details' | translate: { email: email }"></p>
-    <p>
-      {{ 'login.wrong_email' | translate }}
-      <a routerLink="../signup">{{ 'login.resend_email' | translate }}</a>
+    <h1 qa="confirmation-title">{{ 'login.check_email.title' | translate }}</h1>
+    <p class="body-m">
+      <span [innerHTML]="'login.check_email.details' | translate: { email: email }"></span>
+    </p>
+    <p class="body-m">
+      {{ 'login.dont_see' | translate }}
+      <a routerLink="../signup">{{ 'login.check_email.resend' | translate }}</a>
+      {{ 'login.check_email.check_spams' | translate }}
     </p>
   </div>
 </stf-user-container>
