--- a/libs/search-widget/src/common/checkbox/Checkbox.scss
+++ b/libs/search-widget/src/common/checkbox/Checkbox.scss
@@ -7,6 +7,10 @@
   max-width: 100%;
   position: relative;
 
+  &.disabled {
+    color: var(--color-neutral-light);
+  }
+
   .sw-checkbox-control {
     -webkit-appearance: none;
     border: 1px solid var(--color-neutral-regular);
@@ -24,9 +28,6 @@
 
     &:disabled {
       border-color: var(--color-neutral-light);
-      & ~ label {
-        color: var(--color-neutral-light);
-      }
     }
   }
 
