--- a/libs/common/src/lib/widgets/widget-generator.component.scss
+++ b/libs/common/src/lib/widgets/widget-generator.component.scss
@@ -44,6 +44,7 @@ $width-configuration: rhythm(56);
     display: flex;
     flex-direction: column;
     gap: rhythm(2);
+    min-height: rhythm(9);
   }
 
   .snippet-configuration-container {
